fixing overflow

--- a/app/assets/stylesheets/links.css
+++ b/app/assets/stylesheets/links.css
@@ -41,6 +41,7 @@
   color: black;
   box-shadow: 6px 6px 17px black;
   text-shadow: 0px 0px 12px yellow;
+  overflow: auto;
 }
 input.tag {
   color: black;
